--- a/views/expenseForm.html
+++ b/views/expenseForm.html
@@ -1,4 +1,26 @@
-{{someText}}
 <br />
-<a href="#">All Expenses</a>
-<a href="#/somethingElse">Also All Expenses</a>
+<div class="row">
+    <div class="col-xs-12">
+        <form name="expenseForm">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Description" ng-model="expense.description" />
+            </div>
+            <div class="form-group">
+                <input type="number" class="form-control" placeholder="0.00" step="0.1" ng-model="expense.amount" />
+            </div>
+            <div class="form-group">
+                <input type="date" class="form-control" ng-model="expense.date" />
+            </div>
+            <div class="form-group d-grid gap-2">
+                <button type="button" class="btn btn-success btn-lg btn-block" ng-click="save()">
+                    <span class="bi bi-check-lg">Save</span>
+                </button>
+            </div>
+            <div class="form-group d-grid gap-2">
+                <a href="#expenses" class="btn btn-light btn-lg btn-block">
+                    <span class="bi bi-x-lg">Cancel</span>
+                </a>
+            </div>
+        </form>
+    </div>
+</div>
